# ai_resume_analyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.lock.txt  requirements.txt
data/: skills_taxonomy.json
models/: latest_role_model.txt  role_pipeline.joblib  role_pipeline_v20260115_1732.joblib
reports/: role_metrics.json
src/resume_analyzer/: cli.py
src/resume_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/resume_analyzer/api/: auth.py  config.py  deps.py  errors.py  main.py  schemas.py  security.py
src/resume_analyzer/api/routers/: analyze.py  version.py
src/resume_analyzer/api/services/: analyze_service.py  upload_service.py
src/resume_analyzer/ml/: role_predictor.py
src/resume_analyzer/parsing/: clean.py  contact.py  docx.py  pdf.py  resume.py
src/resume_analyzer/scoring/: match.py
src/resume_analyzer/skills/: extract.py  taxonomy.py
src/resume_analyzer/utils/: config.py
tests/: test_api.py  test_contact.py  test_match.py  test_parsing.py  test_role_predictor.py  test_skills.py
training/: generate_role_dataset.py  train_role_model.py
